# tsp

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  pyproject.toml  setup.cfg
config/: tsp.toml
config/.ipynb_checkpoints/: config-checkpoint.py
data/: argentina.tsp  nicaragua.tsp  yemen.tsp
solutions/: README.md  att48_solution.txt  p01_solution.txt  qatar_solution.txt  random.txt  random_solution.txt
tests/: conftest.py  test_algorithms.py  test_ants.py  test_tour.py  test_tsp.py  test_utils.py
tests/.ipynb_checkpoints/: test_tour-checkpoint.py  test_tsp-checkpoint.py
tsp/: __init__.py  algorithms.py  cli.py  solver.py  utils.py
tsp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tsp.egg-info/.ipynb_checkpoints/: top_level-checkpoint.txt
tsp/.ipynb_checkpoints/: __init__-checkpoint.py  algorithms-checkpoint.py
