[metadata]
name = tsp
author = Adolfo De Unánue
author_email = a@unanue.mx
version = '0.1.0'
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering
license_files =
  LICENSE.txt
description = My awesome program prints cool messages
url = https://github.com/joe/mypkg


[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
install_requires =
  numpy
  click
  dynaconf
  more-itertools
  scipy

[options.extras_require]
tests =
  pytest
  flake8


[options.entry_points]
console_scripts =
  calculate_tour = tsp.cli:simular
