[metadata]
name = tsp
author = "Adolfo De Unánue, Carlos Perez"
author_email = "a@unanue.mx, ccggppvv@hotmail.com"
version = attr: tsp.__version__
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering
license_files =
  LICENSE.txt
description = Solves the TSP problem using a bunch of algorithms
url = https://github.com/carlosgeovany/tsp
project_urls =
    Issue Tracker = https://github.com/carlosgeovany/tsp/issues


[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
include_package_data = True
install_requires =
  numpy
  click
  dynaconf
  more-itertools
  scipy
  matplotlib

[options.extras_require]
tests =
  pytest
  flake8

[options.entry_points]
console_scripts =
  calculate_tour = tsp.cli:start
